--- a/registration form.html
+++ b/registration form.html
@@ -20,7 +20,7 @@ margin:50px;
 <body>
 <br>
 <center>
-Enter your Name:
+Enter your first Name:
 <input type="textbox",name="name">
 <br><br><br>
 Enter your College:
