--- a/registration form.html
+++ b/registration form.html
@@ -23,6 +23,9 @@ margin:50px;
 Enter your first Name:
 <input type="textbox",name="name">
 <br><br><br>
+  Enter your Last Name:
+<input type="textbox",name="name">
+<br><br><br>
 Enter your College:
 <input type="textbox",name="name">
 <br><br><br>
