--- a/registration form.html
+++ b/registration form.html
@@ -26,6 +26,9 @@ Enter your first Name:
   Enter your Last Name:
 <input type="textbox",name="name">
 <br><br><br>
+  Enter your School:
+<input type="textbox",name="name">
+<br><br><br>
 Enter your College:
 <input type="textbox",name="name">
 <br><br><br>
