--- a/registration form.html
+++ b/registration form.html
@@ -61,6 +61,7 @@ select Course :
 <option value="MBA">MBA</option>  
 <option value="MCA">MCA</option>  
 <option value="M.Tech">M.Tech</option>  
+<option value="Design">M.Tech</option>
 </select>  
 
 <br><br><br>
