--- a/registration form.html
+++ b/registration form.html
@@ -74,6 +74,7 @@ Select Your Date Of Birth:
 <label><input type="checkbox" name="value" id="coding">Coding</label>
 <label><input type="checkbox" name="value" id="Writing">Writing</label>
 <label><input type="checkbox" name="value" id="swimming">Swimming</label>
+<label><input type="checkbox" name="value" id="Drawing">Swimming</label>
 <br><br><br>
 
 <input type="submit",value="submit",id="submit">
